deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      name: nginx-deployment-pod     # optional
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80



# kubectl apply -f deployment.yaml
# kubectl scale deployment nginx-deployment -n -- replicas = 5
