pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  namespace: nginx
  name: nginx-pod
spec: 
  containers:
    - name: nginx 
      image: nginx:latest
      ports:
        - containerPort: 8090



# kubectl apply -f pod.yaml

# kubectl exec -it nginx -n nginx -- sh

# kubectl describe pod nginx-pod -n nginx
