state-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: state-service
  namespace: mysql-database
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  -name: mysql
  port: 3306
  protocol: TCP
  targetPort: 3306
