ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wesite.nextgen.com
      http:
        paths:
          - pathType: Prefix
            path: /nginx
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - pathType: Prefix
            path: /app
            backend:
              service:
                name: app-service
                port:
                  number: 80
